--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@carbon/icons-react": "^11.58.0",
     "@carbon/react": "^1.80.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
